--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@graphql-tools/load-files": "^6.6.1",
     "apollo-server-express": "^3.3.0",
+    "bcrypt": "^5.1.0",
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
@@ -32,13 +33,16 @@
     "graphql": "^15.5.3",
     "graphql-import-node": "^0.0.4",
     "graphql-tools": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "ncp": "^2.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.1",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^16.7.10",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
