--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
 PORT = 3026
-DATABASE="mongodb://localhost:27017/jwt-login-register-21"
+DATABASE="mongodb://localhost:27017/neoprode"
 SECRET_KEY="Anartz1789719871_!-twyw489"
